<resources>
    <string name="app_name">Calcount</string>
    <string name="apk_intro">CALCOUNT</string>
    <string name="diskon">Diskon (%)</string>
    <string name="harga1">Harga (Rp.)</string>
    <string name="jumlah_diskon">Jumlah Diskon</string>
    <string name="total">Total Pembayaran</string>
    <string name="hitung">Hitung</string>
    <string name="reset">Reset</string>
    <string name="intro">aplikasi untuk menghitung jumlah diskon dan total pembayaran anda</string>
    <string name="harga_invalid">Harus masukkan jumlah harga</string>
    <string name="diskon_invalid">Harus masukkan jumlah diskon</string>
    <string name="keluar">Keluar</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">CALCOUNT merupakan sebuah aplikasi Android untuk menghitung jumlah diskon sehingga pengguna dapat mengetahui jumlah diskon yang di dapatkan.\n\nAplikasi ini dibuat untuk Asessment Mobpro1.\nTemukan kodenya di https://github.com/reginavidya/assessment\n\nCopyright © 2022 Regina Vidya Destiani.\nAll rights reserved.</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">Harga: Rp.%1$s \nDiskon: %2$s persen \n\nJumlah Diskon: %3$s \nTotal Bayar: %4$s </string>
    <string name="belum_ada_data">Data belum tersedia</string>
    <string name="histori">Histori</string>
    <string name="hasil_x">Harga:Rp. %1$.0f - Diskon: %2$.0f persen</string>
    <string name="data_x">Jumlah Diskon:Rp. %1$.0f - Total Pembayaran:Rp. %2$.0f</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="action_switch_layout">Ubah Layout</string>
    <string name="lainnya">Lainnya</string>
    <string name="deskripsi">Berikut merupakan salah satu akun instagram\n yang memberikan informasi mengenai diskon yang sedang diadakan\n\n Berikut link instagram akun tersebut : https://www.instagram.com/giladiskonn/?hl=en</string>
    <string name="message">%1$s diklik!</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>
    <string name="notif_title">Ada Diskon dan Cashback baru nih!</string>
    <string name="notif_text">Cepet cek sekarang biar gak ketinggalan</string>
</resources>