<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HitungFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="#FFC004"
                android:fontFamily="@font/almendra_bold"
                android:text="@string/apk_intro"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="#FFFFFF"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button3" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/download_removebg_preview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"  />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/intro"
                    android:textAlignment="center"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/harga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:labelFor="@id/editHarga"
                    android:text="@string/harga1"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/editHarga"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editHarga" />

                <EditText
                    android:id="@+id/editHarga"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:textSize="16dp"
                    android:hint="Contoh: 10000"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/harga"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/diskon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:labelFor="@id/editDiskon"
                    android:text="@string/diskon"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/editDiskon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editDiskon" />

                <EditText
                    android:id="@+id/editDiskon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="16dp"
                    android:hint="Contoh: 10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/editHarga"
                    app:layout_constraintTop_toBottomOf="@+id/editHarga" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button2" />

                <TextView
                    android:id="@+id/hasil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:labelFor="@id/editHarga"
                    android:text="@string/jumlah_diskon"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/editHasil"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editHasil" />

                <TextView
                    android:id="@+id/editHasil"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="Rp."
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:labelFor="@id/editTotal"
                    android:text="@string/total"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/editTotal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editTotal" />

                <TextView
                    android:id="@+id/editTotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="Rp."
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editHasil" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/hitung"
                    app:layout_constraintEnd_toEndOf="@+id/editDiskon"
                    app:layout_constraintTop_toBottomOf="@+id/editDiskon"/>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#AB1A1A"
                    android:text="@string/reset"
                    app:layout_constraintEnd_toEndOf="@+id/editDiskon"
                    app:layout_constraintStart_toStartOf="@+id/diskon"
                    app:layout_constraintTop_toBottomOf="@+id/editDiskon" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTotal" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/keluar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
